// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-8--new-workspace-create-application-false-project-then-ng-add > should pass linting when adding a project before running ng-add 1`] = `
{
  "@angular-eslint/builder": "0.0.0-e2e",
  "@angular-eslint/eslint-plugin": "0.0.0-e2e",
  "@angular-eslint/eslint-plugin-template": "0.0.0-e2e",
  "@angular-eslint/schematics": "0.0.0-e2e",
  "@angular-eslint/template-parser": "0.0.0-e2e",
  "@angular/build": "^21.X.X",
  "@angular/cli": "^21.X.X",
  "@angular/compiler-cli": "^21.X.X",
  "@typescript-eslint/eslint-plugin": "7.11.0",
  "@typescript-eslint/parser": "7.11.0",
  "eslint": "8.57.1",
  "jsdom": "^27.1.0",
  "typescript": "~5.X.X",
  "vitest": "^4.0.8"
}
`;

exports[`eslint-8--new-workspace-create-application-false-project-then-ng-add > should pass linting when adding a project before running ng-add 2`] = `
"{
  "root": true,
  "ignorePatterns": [
    "projects/**/*"
  ],
  "overrides": [
    {
      "files": [
        "*.ts"
      ],
      "extends": [
        "eslint:recommended",
        "plugin:@typescript-eslint/recommended",
        "plugin:@angular-eslint/recommended",
        "plugin:@angular-eslint/template/process-inline-templates"
      ],
      "rules": {
        "@angular-eslint/directive-selector": [
          "error",
          {
            "type": "attribute",
            "prefix": "app",
            "style": "camelCase"
          }
        ],
        "@angular-eslint/component-selector": [
          "error",
          {
            "type": "element",
            "prefix": "app",
            "style": "kebab-case"
          }
        ]
      }
    },
    {
      "files": [
        "*.html"
      ],
      "extends": [
        "plugin:@angular-eslint/template/recommended",
        "plugin:@angular-eslint/template/accessibility"
      ],
      "rules": {}
    }
  ]
}
"
`;

exports[`eslint-8--new-workspace-create-application-false-project-then-ng-add > should pass linting when adding a project before running ng-add 3`] = `
"{
  "extends": "../../.eslintrc.json",
  "ignorePatterns": [
    "!**/*"
  ],
  "overrides": [
    {
      "files": [
        "*.ts"
      ],
      "rules": {
        "@angular-eslint/directive-selector": [
          "error",
          {
            "type": "attribute",
            "prefix": "app",
            "style": "camelCase"
          }
        ],
        "@angular-eslint/component-selector": [
          "error",
          {
            "type": "element",
            "prefix": "app",
            "style": "kebab-case"
          }
        ]
      }
    },
    {
      "files": [
        "*.html"
      ],
      "rules": {}
    }
  ]
}
"
`;

exports[`eslint-8--new-workspace-create-application-false-project-then-ng-add > should pass linting when adding a project before running ng-add 4`] = `
{
  "builder": "@angular-eslint/builder:lint",
  "options": {
    "lintFilePatterns": [
      "projects/app-project/**/*.ts",
      "projects/app-project/**/*.html",
    ],
  },
}
`;

exports[`eslint-8--new-workspace-create-application-false-project-then-ng-add > should pass linting when adding a project before running ng-add 5`] = `
"
Linting "app-project"...

All files pass linting.
"
`;
